<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.rococoa</groupId>
  <artifactId>rococoa-parent</artifactId>
  <version>0.8.8</version>
  <packaging>pom</packaging>

  <modules>
    <!-- module>rococoa-auto</module -->
    <module>rococoa-core</module>
    <module>rococoa-cocoa</module>
    <module>rococoa-contrib</module>
    <!-- module>rococoa-functionaltest</module -->
  </modules>

  <name>Rococoa Parent Project</name>
  <url>https://github.com/umjammer/rococoa</url>
  <scm>
    <url>https://github.com/umjammer/rococoa</url>
    <connection>scm:git:git@github.com:umjammer/rococoa.git</connection>
    <developerConnection>scm:git:git@github.com:umjammer/rococoa.git</developerConnection>
  </scm>
  <developers>
    <developer>
      <id>oneeyedmen</id>
      <name>Duncan McGregor</name>
      <email>duncan@oneeyedmen.com</email>
      <roles>
        <role>Owner</role>
      </roles>
    </developer>
    <developer>
      <id>lordpixel</id>
      <name>Andrew Thompson</name>
      <email>lordpixel@mac.com</email>
      <roles>
        <role>Owner</role>
      </roles>
    </developer>
    <developer>
      <id>dkocher</id>
      <name>David Kocher</name>
      <email>post@iterate.ch</email>
      <organization>iterate GmbH</organization>
      <roles>
        <role>Committer</role>
      </roles>
    </developer>
    <developer>
      <id>keteracel</id>
      <name>Paul Loy</name>
      <email>keteracel@gmail.com</email>
      <roles>
        <role>Committer</role>
      </roles>
    </developer>
    <developer>
      <id>ochafik</id>
      <name>Olivier Chafik</name>
      <email>olivier.chafik@gmail.com</email>
      <roles>
        <role>Committer</role>
      </roles>
    </developer>
  </developers>
  <licenses>
    <license>
      <name>LGPL 3</name>
      <url>http://www.gnu.org/licenses/lgpl-3.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <properties>
    <jna.version>5.14.0</jna.version>
  </properties>

  <distributionManagement>
    <repository>
      <id>github</id>
      <url>https://maven.pkg.github.com/umjammer/rococoa</url>
    </repository>
  </distributionManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.11.0</version>
          <configuration>
            <release>17</release>
            <compilerArgs>
              <arg>-XDignore.symbol.file</arg> <!-- for com.apple.eawt -->
            </compilerArgs>
            <!-- https://stackoverflow.com/a/30472473 -->
            <fork>true</fork>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.2.2</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.3.0</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.5.0</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
            <configuration>
              <additionalJOptions>
                <additionalJOption>-J-Duser.language=en_US</additionalJOption> <!-- ad-hoc -->
              </additionalJOptions>
              <additionalOptions>
                <additionalOption>-Xdoclint:none</additionalOption>
                <additionalOption>-Xdoclint:-missing</additionalOption>
              </additionalOptions>
              <debug>false</debug>
              <verbose>false</verbose>
              <failOnWarnings>false</failOnWarnings>
              <failOnError>false</failOnError>
              <doclint>none</doclint>
              <quiet>true</quiet>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.rococoa</groupId>
        <artifactId>rococoa-core</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.rococoa</groupId>
        <artifactId>rococoa-cocoa</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.rococoa</groupId>
        <artifactId>rococoa-core</artifactId>
        <type>test-jar</type>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.rococoa</groupId>
        <artifactId>rococoa-contrib</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.rococoa</groupId>
        <artifactId>rococoa-functionaltest</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>net.java.dev.jna</groupId>
        <artifactId>jna</artifactId>
        <version>${jna.version}</version>
      </dependency>
      <dependency>
        <groupId>net.bytebuddy</groupId>
        <artifactId>byte-buddy</artifactId>
        <version>1.14.8</version>
      </dependency>

      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.10.2</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-commons</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>